# fe-deviner

./: .gitignore  README.md  plan.md  pyproject.toml
.cursor/rules/: config.mdc  design.mdc  method.mdc
agent/: CONFIG.md  DESIGN.md  EVAL.md  METHOD.md
agent/PATTERNS/: 3d.md  ambient-background.md  asymmetrical.md  bento-grid.md  css-generative.md  cursor-custom.md  direction-aware.md  full-bleed.md  gesture-driven.md  grid-breaking.md  gsap.md  hover-micro.md  kinetic-type.md  loading-states.md  lottie.md  noise-grain.md  overlay-composition.md  page-transitions.md  scroll-driven.md  split-screen.md  spring-physics.md  sticky-scroll.md  svg-morphing.md  typography-led.md
agent/SKILLS/: card.md  data-table.md  drag-and-drop.md  footer.md  form.md  hero.md  modal.md  navigation.md  notification.md  onboarding.md  pricing.md
agent/STYLES/: editorial.md  glassmorphism.md  minimalist.md  modernist.md  neubrutalist.md
eval/: __main__.py  combined.py
eval/render_validator/: __init__.py  validator.py
eval/shared/: __init__.py  parser.py
eval/structural_validator/: __init__.py  validator.py
eval/tailwind_validator/: __init__.py  allowlist.py  extractor.py  report.py  validator.py
samples/: centered-hero.tsx  confirmation-dialog.tsx  contact-form.tsx  form-dialog.tsx  full-bleed-hero.tsx  interactive-card.tsx  main-navigation.tsx  minimal-footer.tsx  site-footer.tsx
scripts/: audit_agent_snippets.py  triage_unknown.py
tests/: test_agent_samples.py  test_eval_layers.py  test_tailwind_validator.py
tests/fixtures/: invalid-card.tsx  invalid-render.tsx  (+3 more)
