[project]
name = "fe-deviner-eval"
version = "0.1.0"
description = "Eval tools for the fe-deviner design-literate AI system"
requires-python = ">=3.10"

[project.scripts]
tailwind-validate = "eval.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["eval*"]
